<resources>
    <string name="app_name">Smart Complaint</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="enter_mail_id">Enter Mail ID</string>
    <string name="create_account">create account</string>
    <string name="smart_complaint">smart complaint</string>
    <string name="enter_title_of_complaint">Enter Title of Complaint</string>
    <string name="enter_your_complaint_here">Enter Your Complaint Here</string>
    <string name="add_image">Add Image</string>
    <string name="add_images">Add Images</string>
    <string name="post_complaint">post complaint</string>
    <string name="select_receiver_of_your_complaint">Select Receiver of your Complaint:</string>
    <string name="PostComplaint">Post Complaint</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="receivers_of_complaint">
        <item>Developer</item>
        <item>Software Development Cell</item>
        <item>CRCL Mess</item>
    </string-array>
</resources>
